src/objects/BMCServiceDesk__BMC_Processor__c.object
<CustomObject>
    <description>Class that stores information about devices that interpret a sequence of machine instructions on a computer. To represent a multiprocessor machine, create one instance of the BMC_Processor class for each processor. This class corresponds to the DMTF CIM_Processor class.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxClockSpeed__c</fullName>
        <label>Maximum Clock Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfCores__c</fullName>
        <label>Number Of Cores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfLogicalProcessors__c</fullName>
        <label>Number Of Logical Processors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherProcessorFamilyDescription__c</fullName>
        <label>Other Processor Family Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProcessorArchitecture__c</fullName>
        <label>Processor Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alpha</fullName>
                </value>
                <value>
                    <fullName>ia64</fullName>
                </value>
                <value>
                    <fullName>MIPS</fullName>
                </value>
                <value>
                    <fullName>PA-RISC</fullName>
                </value>
                <value>
                    <fullName>PowerPC</fullName>
                </value>
                <value>
                    <fullName>x86</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProcessorFamily__c</fullName>
        <label>Processor Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>68000</fullName>
                </value>
                <value>
                    <fullName>68010</fullName>
                </value>
                <value>
                    <fullName>68020</fullName>
                </value>
                <value>
                    <fullName>68030</fullName>
                </value>
                <value>
                    <fullName>68040</fullName>
                </value>
                <value>
                    <fullName>68xxx Family</fullName>
                </value>
                <value>
                    <fullName>6x86</fullName>
                </value>
                <value>
                    <fullName>80286</fullName>
                </value>
                <value>
                    <fullName>80287</fullName>
                </value>
                <value>
                    <fullName>80386</fullName>
                </value>
                <value>
                    <fullName>80387</fullName>
                </value>
                <value>
                    <fullName>80486</fullName>
                </value>
                <value>
                    <fullName>8086</fullName>
                </value>
                <value>
                    <fullName>8087</fullName>
                </value>
                <value>
                    <fullName>Alpha 21064</fullName>
                </value>
                <value>
                    <fullName>Alpha 21066</fullName>
                </value>
                <value>
                    <fullName>Alpha 21164</fullName>
                </value>
                <value>
                    <fullName>Alpha 21164a</fullName>
                </value>
                <value>
                    <fullName>Alpha 21164PC</fullName>
                </value>
                <value>
                    <fullName>Alpha 21264</fullName>
                </value>
                <value>
                    <fullName>Alpha 21364</fullName>
                </value>
                <value>
                    <fullName>Alpha Family</fullName>
                </value>
                <value>
                    <fullName>AMD(R) Duron(TM) Processor</fullName>
                </value>
                <value>
                    <fullName>AMD29000 Family</fullName>
                </value>
                <value>
                    <fullName>AMD Athlon(TM) Processor Family</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>AS400 Family</fullName>
                </value>
                <value>
                    <fullName>Celeron(TM)</fullName>
                </value>
                <value>
                    <fullName>Crusoe(TM) TM3000 Family</fullName>
                </value>
                <value>
                    <fullName>Crusoe(TM) TM5000 Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProcessorStatus__c</fullName>
        <label>Processor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPU Disabled By BIOS (POST Error)</fullName>
                </value>
                <value>
                    <fullName>CPU Disabled by user via BIOS Setup</fullName>
                </value>
                <value>
                    <fullName>CPU Enabled</fullName>
                </value>
                <value>
                    <fullName>CPU is Idle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProcessorType__c</fullName>
        <label>Processor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Processor</fullName>
                </value>
                <value>
                    <fullName>DSP Processor</fullName>
                </value>
                <value>
                    <fullName>Math Processor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Video Processor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpgradeMethod__c</fullName>
        <label>Upgrade Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>370 Pin Socket</fullName>
                </value>
                <value>
                    <fullName>Daughter Board</fullName>
                </value>
                <value>
                    <fullName>LIF Socket</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Replacement/Piggy Back</fullName>
                </value>
                <value>
                    <fullName>Slot 1</fullName>
                </value>
                <value>
                    <fullName>Slot 2</fullName>
                </value>
                <value>
                    <fullName>Slot A</fullName>
                </value>
                <value>
                    <fullName>Slot M</fullName>
                </value>
                <value>
                    <fullName>Socket 423</fullName>
                </value>
                <value>
                    <fullName>Socket A (Socket 462)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>ZIF Socket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Processor</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_Processor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>